Revision history for Linux-Statm-Tiny

{{$NEXT}}
  [Documentation]
  - Improved POD so that it's clear that vsz and rss are aliases.

  [Enhancements]
  - vsz and rss and explicitly defined as aliases

  - dist.ini modified to use AutoPrereqs and add better
    metadata to the distribution.

  - Removed use of common::sense in the tests.

  - Added mb aliases, e.g. "size_mb".

  - The kb and mb aliases use the ceil function to round values up.

0.0300    2015-01-12 11:26:08+00:00 Europe/London
  [Documentation]
  - Fixed typo in POD markup.

  - Bumped copyright year.

  [Enhancements]
  - Added vsz as alias for size.

  - Used proper aliases instead of wrapper methods.

  - Added *_pages aliases.

  - Aded page_size attribute.

  - Added *_bytes and *_kb methods.

  [Incompatabile Changes]
  - Removed vss alias, which is a typo. Use vsz.

0.0201    2015-01-05 18:19:39+00:00 Europe/London
  [Other Changes]
  - Test prerequisties are explicitly in the test phase.

0.0200    2015-01-05 15:36:32+00:00 Europe/London
  [Enhancements]
  - Added vss and rss as aliases for size and resident.

0.0100    2015-01-05 12:18:43+00:00 Europe/London
  - Initial prototype.